# BizyAir

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  404.html  LICENSE  README.md  __init__.py  api_key.ini  api_key.ini.example  auth.py  bizyair_example_menu.json  cuteyou.py  data_types.py  dev_requirements.txt  diffusers_server_client.py  image_utils.py  increment_version.py  index.html  kolors.py  liveportrait.py  llm.py  mzkolors.py  nodes.py  nodes_automatic_marking.py  nodes_automatic_marking_utils.py  nodes_controlnet_aux.py  nodes_controlnet_union_sdxl.py  package-lock.json  prestartup_script.py  profile.ini.example  pyproject.toml  pytest.ini  register.py  requirements.txt  requirements_adv.txt  route_bizyair_tools.py  route_sam.py  sam.py  (+7 more)
ai-assistants/: introduce.html
backend/: MANIFEST.in  README.md  build_bizyair.sh  build_bizyengine.sh  pyproject.toml
backend/bizyair/: __init__.py
backend/bizyair/bizy_server/: __init__.py  api_client.py  utils.py
backend/bizyair/bizyair/: __init__.py  nodes_io.py
backend/bizyair/bizyair/commands/: __init__.py
backend/bizyair/bizyair/commands/processors/: prompt_processor.py
backend/bizyair/bizyair/commands/servers/: prompt_server.py
backend/bizyair/bizyair/common/: client.py
backend/bizyair/bizyair/path_utils/: utils.py
backend/bizyair/bizyair_extras/: nodes_advanced_refluxcontrol.py  nodes_cogview4.py  nodes_comfyui_detail_daemon.py  nodes_comfyui_instantid.py  nodes_comfyui_layerstyle_advance.py  nodes_comfyui_pulid_flux.py  nodes_controlnet.py  nodes_custom_sampler.py  nodes_dataset.py  nodes_differential_diffusion.py  nodes_flux.py  nodes_image_utils.py  nodes_ip2p.py  nodes_janus_pro.py  nodes_model_advanced.py  nodes_sd3.py  nodes_segment_anything.py  nodes_segment_anything_utils.py  nodes_testing_utils.py  nodes_trellis.py  nodes_ultimatesdupscale.py  nodes_upscale_model.py  nodes_wan_video.py
backend/bizyair/bizyair_extras/nodes_ipadapter_plus/: nodes_ipadapter_plus.py
backend/bizyair/bizyair_extras/nodes_kolors_mz/: __init__.py
backend/bizyair/core/: __init__.py
backend/bizyair/core/commands/processors/: prompt_processor.py
backend/bizyair/core/commands/servers/: prompt_server.py
backend/bizyair/core/configs/: conf.py
backend/bizyair/core/path_utils/: path_manager.py  utils.py
backend/bizyair/misc/: auth.py  increment_version.py  llm.py  mzkolors.py  nodes.py  nodes_controlnet_aux.py  nodes_controlnet_union_sdxl.py  segment_anything.py  showcase.py  supernode.py
backend/bizyengine/: __init__.py
backend/bizyengine/bizy_server/: api_client.py  errno.py  error_handler.py  profile.py  resp.py  server.py  stream_response.py  utils.py
backend/bizyengine/bizyair_extras/: __init__.py  nodes_advanced_refluxcontrol.py  nodes_cogview4.py  nodes_comfyui_detail_daemon.py  nodes_comfyui_instantid.py  nodes_comfyui_layerstyle_advance.py  nodes_comfyui_pulid_flux.py  nodes_controlnet.py  nodes_custom_sampler.py  nodes_dataset.py  nodes_differential_diffusion.py  nodes_flux.py  nodes_image_utils.py  nodes_ip2p.py  nodes_janus_pro.py  nodes_model_advanced.py  nodes_nunchaku.py  nodes_rf_inversion.py  nodes_sd3.py  nodes_segment_anything.py  nodes_testing_utils.py  nodes_trellis.py  nodes_ultimatesdupscale.py  nodes_upscale_model.py  nodes_wan.py  nodes_wan_i2v.py  nodes_wan_video.py  route_bizyair_tools.py
backend/bizyengine/bizyair_extras/nodes_ipadapter_plus/: nodes_ipadapter_plus.py
backend/bizyengine/bizyair_extras/nodes_kolors_mz/: __init__.py
backend/bizyengine/core/: __init__.py  data_types.py  nodes_base.py  nodes_io.py
backend/bizyengine/core/commands/: base.py
backend/bizyengine/core/commands/processors/: prompt_processor.py
backend/bizyengine/core/commands/servers/: prompt_server.py
backend/bizyengine/core/common/: __init__.py  caching.py  client.py  env_var.py  utils.py
backend/bizyengine/core/configs/: conf.py  models.json  models.yaml
backend/bizyengine/core/path_utils/: __init__.py  path_manager.py  utils.py
backend/bizyengine/custom_nodes/: ComfyUI-WanVideoWrapper.json.disabled
backend/bizyengine/misc/: auth.py  llm.py  mzkolors.py  nodes.py  nodes_controlnet_aux.py  nodes_controlnet_union_sdxl.py  segment_anything.py  supernode.py  utils.py
biz_lib_frontend/: .gitignore  bun.lockb  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
bizyair_extras/: __init__.py  nodes_advanced_refluxcontrol.py  nodes_cogview4.py  nodes_comfyui_detail_daemon.py  nodes_comfyui_instantid.py  nodes_comfyui_layerstyle_advance.py  nodes_comfyui_pulid_flux.py  nodes_comfyui_rf_inversion.py  nodes_controlnet.py  nodes_custom_sampler.py  nodes_dataset.py  nodes_dev_sdxl_checkpoint.py  nodes_differential_diffusion.py  (+17 more)
frontend/: build_bizyui.sh  pyproject.toml
frontend/js/: bizyair_tools.js  deprecated.js  menus.js  model_apply.js  server_endpoints.js
frontend/js/subassembly/: tools.js
(+317 files in other folders)
