[project]
name = "bizyair"
description = "[a/BizyAir](https://github.com/siliconflow/BizyAir) Comfy Nodes that can run in any environment."
license = { file = "LICENSE" }
version = "1.1.4"

[project.urls]
Repository = "https://github.com/siliconflow/BizyAir"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "siliconflow"
DisplayName = "☁️BizyAir"
Icon = "https://framerusercontent.com/images/4li2PjWxZJmoGkzXRMJWU1rJmI.svg"
